--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -95,13 +95,13 @@
                     <i class="fas fa-fw fa-table"></i>
                     <span>planning</span></a>
             </li>
-             <li class="nav-item active">
-                <a class="nav-link" href="{{asset('cours.html')}}">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{path('app_event_index')}}">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>evenement</span></a>
+                    <span>Events</span></a>
             </li>
-             <li class="nav-item active">
-                <a class="nav-link" href="{{asset('cours.html')}}">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{path('app_tool_index')}}">
                     <i class="fas fa-fw fa-table"></i>
                     <span>tools</span></a>
             </li>
