--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,12 +90,12 @@
                     <span>commandes</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{{asset('cours.html')}}">
+                <a class="nav-link" href="{{path('app_cours_index') }}">
                     <i class="fas fa-fw fa-table"></i>
                     <span>cours</span></a>
             </li>
              <li class="nav-item active">
-                <a class="nav-link" href="{{asset('cours.html')}}">
+                <a class="nav-link" href="{{path('app_planning_index') }}">
                     <i class="fas fa-fw fa-table"></i>
                     <span>planning</span></a>
             </li>
