--- a/templates/cours/showF.html.twig
+++ b/templates/cours/showF.html.twig
@@ -36,12 +36,12 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./class-details.html">Classes</a></li>
-                <li><a href="./services.html">Cours</a></li>
+                <li><a href="{{path('app_show')}}">Cours</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
                     <ul class="dropdown">
                         <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="./class-timetable.html">Classes timetable</a></li>
+                        <li><a href="{{path('app_cal')}}">planning</a></li>
                         <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
                         <li><a href="./team.html">Our team</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
@@ -79,11 +79,12 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about-us.html">About Us</a></li>
                             <li><a href="./classes.html">Classes</a></li>
-                            <li class="active"><a href="./services.html">Cours</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about-us.html">About us</a></li>
+                              <li><a href="{{path('app_show')}}">Cours</a></li>
+                <li><a href="./team.html">Our Team</a></li>
+                <li><a href="#">Pages</a>
+                    <ul class="dropdown">
+                        <li><a href="./about-us.html">About us</a></li>
+                        <li><a href="{{path('app_cal')}}">planning</a></li>
                                     <li><a href="./class-timetable.html">Classes timetable</a></li>
                                     <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
                                     <li><a href="./team.html">Our team</a></li>
@@ -143,6 +144,8 @@
                     <div class="section-title">
                         <span>What we do?</span>
                         <h2>PUSH YOUR LIMITS FORWARD</h2>
+                        <li><a href="{{ path('order_By_Nomf')}}">Trie par Nom</a></li>
+                        {{knp_pagination_render(cours) }}
                     </div>
                 </div>
             </div>
@@ -169,7 +172,15 @@
              {% endfor %}
                 
           </div>
+         
     </section>
+     <div class="container">
+          
+          </div>
+    
+  
+   
+
     <section class="banner-section set-bg" data-setbg="{{asset('front/img/banner-bg.jpg')}}">
         <div class="container">
             <div class="row">
@@ -184,6 +195,7 @@
             </div>
         </div>
     </section>
+    
 {% endblock %}
  <section class="footer-section">
         <div class="container">
