--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -22,6 +22,7 @@
                 <th>Nom</th>
                 <th>Prenom</th>
                 <th>Role</th>
+                <th>IsVerified</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -34,6 +35,7 @@
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.roleuser }}</td>
+                <td>{{ user.IsVerified ? 'yes' : 'no' }}</td>
                 <td>
                  <div class="my-2"></div>
                                     <a href="{{ path('app_user_show', {'id': user.id}) }}" class="btn btn-success btn-icon-split">
@@ -45,6 +47,8 @@
                                       
                                         <span class="text">edit</span>
                                     </a>
+                                    <a href="{{ path('app_block_utilisateur', { 'id': user.id }) }}"><svg xmlns="http://www.w3.org/2000/svg" style="color:black" width="25" height="25" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16"> <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/> </svg></a>
+               <a href="{{ path('app_unblock_utilisateur', { 'id': user.id }) }}"><svg xmlns="http://www.w3.org/2000/svg"style="color:black" width="25" height="25" fill="currentColor" class="bi bi-unlock" viewBox="0 0 16 16"> <path d="M11 1a2 2 0 0 0-2 2v4a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h5V3a3 3 0 0 1 6 0v4a.5.5 0 0 1-1 0V3a2 2 0 0 0-2-2zM3 8a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1H3z"/> </svg></a>
                 </td>
             </tr>
         {% else %}
