--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,6 +36,10 @@
            <button class="btn btn-lg btn-primary" type="submit">
         Connexion
     </button>
+     <a href="{{ path('app_forgot_password_request') }}"  class="btn btn-success btn-icon-split">
+                                      
+                                        <span class="text">Mot de passe oublié?</span>
+                                    </a>
             
                 </div>
                 </div>
