--- a/templates/reclamationn/index.html.twig
+++ b/templates/reclamationn/index.html.twig
@@ -6,9 +6,11 @@
     <h1><center>Reclamationn index</center></h1>
  <br><br> <br><br> <br><br> <br><br> <br><br>
  <div class="container">
+  
      <table class="table table-dark table-striped">
      <div class="mt-5 mb-6 ">
         <thead>
+            {{knp_pagination_render(reclamationns) }}
             <tr>
                 <th>Id</th>
                 <th>IdUser</th>
@@ -22,6 +24,7 @@
         </div>
         <tbody>
         {% for reclamationn in reclamationns %}
+        
             <tr>
                 <td>{{ reclamationn.id }}</td>
                 <td>{{ reclamationn.idUser }}</td>
@@ -44,7 +47,10 @@
             <tr>
                 <td colspan="7">no records found</td>
             </tr>
+          
+           
         {% endfor %}
+      
         </tbody>
     </table>
     </div>
