--- a/templates/planning/showF.html.twig
+++ b/templates/planning/showF.html.twig
@@ -49,12 +49,12 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./class-details.html">Classes</a></li>
-              <li><a href="{{path('app_show')}}">Cours</a></li>
+                <li><a href="./services.html">cours</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
                     <ul class="dropdown">
                         <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="{{path('app_cal')}}">planning</a></li>
+                        <li><a href="./class-timetable.html">Classes timetable</a></li>
                         <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
                         <li><a href="./team.html">Our team</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
@@ -92,12 +92,12 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about-us.html">About Us</a></li>
                             <li><a href="./classes.html">Classes</a></li>
-                             <li><a href="{{path('app_show')}}">Cours</a></li>
-                <li><a href="./team.html">Our Team</a></li>
-                <li><a href="#">Pages</a>
-                    <ul class="dropdown">
-                        <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="{{path('app_cal')}}">planning</a></li>
+                            <li><a href="./services.html">Services</a></li>
+                            <li><a href="./team.html">Our Team</a></li>
+                            <li class="active"><a href="#">Pages</a>
+                                <ul class="dropdown">
+                                    <li><a href="./about-us.html">About us</a></li>
+                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
                                     <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
                                     <li><a href="./team.html">Our team</a></li>
                                     <li><a href="./gallery.html">Gallery</a></li>
@@ -267,9 +267,7 @@
                 display: 'inverse-background'
              },
 
-            events: {{ data|raw }},
-              editable: true,
-            eventResizableFromStart: true
+            events: {{ data|raw }}
             
                                   
         })
