--- a/templates/type/index.html.twig
+++ b/templates/type/index.html.twig
@@ -9,6 +9,8 @@
     <table class="table table-dark table-striped">
     <div class="mt-5 mb-6 ">
         <thead>
+                  <a href="{{ path('order_By_Nom')}}">Trie par nom </a>
+       
             <tr>
                 <th>Id</th>
                 <th>Nom_type</th>
