--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,9 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %} COURS {% endblock %}</title>
+
+        <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700' rel='stylesheet'>
+
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run composer require symfony/webpack-encore-bundle to start using Symfony UX #}
         {% block stylesheets %}
+            <!-- Load Flashy default CSS -->
+            <link rel="stylesheet" href="{{ asset('bundles/mercuryseriesflashy/css/flashy.css') }}">
+
              <link href="{{asset('vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
     <link
         href="{{asset('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i')}}"
@@ -154,7 +161,15 @@
             </footer>
             <!-- End of Footer -->
               {% block javascripts %}
-          
+
+                  <!-- Flashy depends on jQuery -->
+                  <script src="//code.jquery.com/jquery.js"></script>
+                  <!-- Load Flashy default JavaScript -->
+                  <script src="{{ asset('bundles/mercuryseriesflashy/js/flashy.js') }}"></script>
+
+
+
+
              <!-- Bootstrap core JavaScript-->
     <script src="{{asset('vendor/jquery/jquery.min.js')}}"></script>
     <script src="{{asset('vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
@@ -172,5 +187,9 @@
     
     <script src="{{asset('js/demo/datatables-demo.js')}}"></script>
         {% endblock %}
+
+        <!-- Include Flashy default partial -->
+        {{ include('@MercurySeriesFlashy/flashy.html.twig') }}
+
 
 </html>
