--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -43,23 +43,18 @@
             <i class="fa fa-search"></i>
         </div>
         <nav class="canvas-menu mobile-menu">
-            <ul>
-            
-                            <li class="active"><a href="{{ path('app_home')}}">Home</a></li>
-                            <li><a href="{{ path('app_prioritee')}}">About Us</a></li>
-                            <li><a href="{{ path('app_show')}}">Classes</a></li>
+          <ul>
+                            <li class="active"><a href="{{ path('app_acceuil')}}">Home</a></li>
+                            <li><a href="{{ path('app_reclamationn_new')}}">About Us</a></li>
+                            <li><a href="{{ path('app_show_cours')}}">Classes</a></li>
                             <li><a href="{{ path('app_cal')}}">Planning</a></li>
                             <li><a href="{{ path('app_articles_index_front')}}">Blog</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="{{ path('app_productfront')}}">Shop</a></li>
-                                    <li><a href="{{ path('')}}">Event</a></li>
-                                    <li><a href=href="{{ path('')}}">Tools</a></li>
+                                    <li><a href="{{ path('app_show')}}">Event</a></li>
                                   
                                 </ul>
-                </li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="canvas-social">
@@ -85,22 +80,18 @@
                 </div>
                 <div class="col-lg-6">
                     <nav class="nav-menu">
-                     <ul>
-                            <li class="active"><a href="{{ path('app_home')}}">Home</a></li>
-                            <li><a href="{{ path('app_prioritee')}}">About Us</a></li>
-                            <li><a href="{{ path('app_show')}}">Classes</a></li>
+                    <ul>
+                            <li class="active"><a href="{{ path('app_acceuil')}}">Home</a></li>
+                            <li><a href="{{ path('app_reclamationn_new')}}">About Us</a></li>
+                            <li><a href="{{ path('app_show_cours')}}">Classes</a></li>
                             <li><a href="{{ path('app_cal')}}">Planning</a></li>
                             <li><a href="{{ path('app_articles_index_front')}}">Blog</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="{{ path('app_productfront')}}">Shop</a></li>
-                                    <li><a href="{{ path('')}}">Event</a></li>
-                                    <li><a href=href="{{ path('')}}">Tools</a></li>
+                                    <li><a href="{{ path('app_show')}}">Event</a></li>
                                   
                                 </ul>
-                            </li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
