--- a/templates/base1.html.twig
+++ b/templates/base1.html.twig
@@ -41,22 +41,18 @@
             <i class="fa fa-search"></i>
         </div>
         <nav class="canvas-menu mobile-menu">
-            <ul>
-                            <li class="active"><a href="{{ path('app_home')}}">Home</a></li>
-                            <li><a href="{{ path('app_prioritee')}}">About Us</a></li>
-                            <li><a href="{{ path('app_show')}}">Classes</a></li>
+          <ul>
+                            <li class="active"><a href="{{ path('app_acceuil')}}">Home</a></li>
+                            <li><a href="{{ path('app_reclamationn_new')}}">About Us</a></li>
+                            <li><a href="{{ path('app_show_cours')}}">Classes</a></li>
                             <li><a href="{{ path('app_cal')}}">Planning</a></li>
                             <li><a href="{{ path('app_articles_index_front')}}">Blog</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="{{ path('app_productfront')}}">Shop</a></li>
-                                    <li><a href="{{ path('')}}">Event</a></li>
-                                    <li><a href=href="{{ path('')}}">Tools</a></li>
+                                    <li><a href="{{ path('app_show')}}">Event</a></li>
                                   
                                 </ul>
-                </li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="canvas-social">
@@ -81,27 +77,18 @@
                 </div>
                 <div class="col-lg-6">
                     <nav class="nav-menu">
-                        <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="front/about-us.html">About Us</a></li>
-                            <li><a href="front/class-details.html">Classes</a></li>
-                            <li><a href="{{path('app_show')}}">cours</a></li>
-                <li><a href="./team.html">Our Team</a></li>
-                <li><a href="{{path('app_login')}}">Login </a></li>
-                <li><a href="{{path('app_register')}}">Sign Up</a></li>
-                <li><a href="#">Pages</a>
-                    <ul class="dropdown">
-                        <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="./class-timetable.html">Classes timetable</a></li>
-                        <li><a href="{{path('app_cal')}}">planning</a></li>
-                                    <li><a href="front/team.html">Our team</a></li>
-                                    <li><a href="front/gallery.html">Gallery</a></li>
-                                    <li><a href="{{path('app_reclamationn_new')}}">Contact Us</a></li>
-                                    <li><a href="front/404.html">404</a></li>
+                      <ul>
+                            <li class="active"><a href="{{ path('app_acceuil')}}">Home</a></li>
+                            <li><a href="{{ path('app_reclamationn_new')}}">About Us</a></li>
+                            <li><a href="{{ path('app_show_cours')}}">Classes</a></li>
+                            <li><a href="{{ path('app_cal')}}">Planning</a></li>
+                            <li><a href="{{ path('app_articles_index_front')}}">Blog</a></li>
+                            <li><a href="#">Pages</a>
+                                <ul class="dropdown">
+                                    <li><a href="{{ path('app_productfront')}}">Shop</a></li>
+                                    <li><a href="{{ path('app_show')}}">Event</a></li>
+                                  
                                 </ul>
-                            </li>
-                            <li><a href="front/contact.html">Contact</a></li>
-                        </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
