--- a/templates/reclamationn/new.html.twig
+++ b/templates/reclamationn/new.html.twig
@@ -29,24 +29,17 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About Us</a></li>
-                            <li><a href="./class-details.html">Classes</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
+                            <li class="active"><a href="{{ path('app_acceuil')}}">Home</a></li>
+                            <li><a href="{{ path('app_reclamationn_new')}}">About Us</a></li>
+                            <li><a href="{{ path('app_show_cours')}}">Classes</a></li>
+                            <li><a href="{{ path('app_cal')}}">Planning</a></li>
+                            <li><a href="{{ path('app_articles_index_front')}}">Blog</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
-                                    <li><a href="./about-us.html">About us</a></li>
-                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
-                                    <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                                    <li><a href="./team.html">Our team</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Our blog</a></li>
-                                    <li><a href="./404.html">404</a></li>
+                                    <li><a href="{{ path('app_productfront')}}">Shop</a></li>
+                                    <li><a href="{{ path('app_show')}}">Event</a></li>
+                                  
                                 </ul>
-                            </li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
